# purpleair_sensor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
aioconveyor/: aioconveyor.py  aioconveyor2.py
config/: paii_poll_supervisor.ini.template  purple_air.ini.template
paii/: paii_poll.py  purple_data.py  purple_device.py
sample/: sample_data.json
scripts/: config.ini  paii_poll.py  purple_air.ini.template
sql/: 2020-08-30_copy_rows.sql  bent_needle.sql  pressure_smooth.sql
src/paii/: paii_poll.py
tests/: test_paii.py
utils/: syslog_handler.py
