[metadata]
name = paiitools
version = 0.1.1
description= poll purple air device
keywords = purple_air, paii, api, postgresql, timescaledb
author = paul sorenson
author_email = news02@metrak.com

[options]
python_requires = >=3.8
install_requires =
    setuptools
    wheel
requires =
    aiohttp
    asyncpg
    asyncio-mqtt
    keyring
    aioconveyor
package_dir =
    =src
packages = find:
test_suite = tests
tests_require = 
    pytest

[options.packages.find]
where = src
